We glob array now

--- a/pages/blog/bee-movie.mdx
+++ b/pages/blog/bee-movie.mdx
@@ -1,7 +1,9 @@
 ---
 title: The Entire Bee Move Script
 subtitle: Well, enough of it anyway
-date: Tuesday, June 2nd, 2020
+date: 2020-06-04
+
+published: true
 
 coverPhoto: https://www.thepopcornmuncher.com/wp-content/uploads/2016/11/bee-movie-1024x582.jpg
 coverPhotoAlt: Jerry Bee-infeld
