--- a/pages/blog/post-1.mdx
+++ b/pages/blog/post-1.mdx
@@ -3,7 +3,9 @@ title: This is a test for my very first blog post!
 subtitle:
     I'm probably doing a lot of this very wrong, but sometimes you just gotta
     try stuff.
-date: Wednesday, June 3rd, 2020
+date: 2020-06-03
+
+published: true
 
 coverPhoto: https://upload.wikimedia.org/wikipedia/commons/8/88/Portland_and_Mt._Hood_from_Pittock_Mansion.jpg
 coverPhotoAlt: Portland Skyline
@@ -32,8 +34,27 @@ This is my site!
 
 `whatever`
 
-```
-shit here
+```ts
+const dooopityDoo = 'hello!';
+function letsTryDepth() {
+    return function HighOrder() {
+        return 'yeep';
+    };
+}
+
+const arrowFunc = () => 'hemlo';
+console.log('AHHHH!');
+
+''.split();
+
+const foo = {
+    bar: {
+        baz: 'Hello, world!',
+    },
+};
+const variable = 'AH';
+
+foo.bar.baz;
 ```
 
 -   a little
@@ -41,3 +62,7 @@ shit here
 -   than
 -   writing
 -   scripts
+
+```
+aaaaa
+```
