--- a/pages/blog/bee-movie.mdx
+++ b/pages/blog/bee-movie.mdx
@@ -1,7 +1,7 @@
 ---
 title: The Entire Bee Move Script
-subtitle: Well, enough of it anyway
-date: 2020-06-04
+subtitle: Well, enough of it, anyway.
+date: Friday, June 5th, 2020
 
 published: true
 
