Some more stuff

--- a/pages/blog/welcome-to-my-blog.mdx
+++ b/pages/blog/welcome-to-my-blog.mdx
@@ -2,7 +2,7 @@
 title: Welcome to my blog!
 subtitle:
     An introductory post with some code samples from the process of making this
-    site!
+    portfolio site!
 date: Friday, June 13th, 2020
 
 published: false
@@ -12,4 +12,42 @@ coverPhotoAlt: Portland Skyline
 coverPhotoTitle: Portland Skyline
 ---
 
-AHHHHH
+## Introduction
+
+Hey! Thanks for checking out my website. Please, take the time to read up about
+me, check out my projects, or, if you're visiting from the future, check out
+some of my other posts! Moving forward, I plan to make my blog primarily about
+my progress as a software engineer - I (think I) am a multi-interested person,
+so topics from post to post may vary pretty significantly. However, my posts
+will generally be about different projects I'm working on, technologies I'm
+currently learning, or even just code/tech-related things I feel like writing
+about. Posts should come out every 2-4 weeks, so check back often!
+
+The body of this post should be detailing how I created this blog. As I've
+mostly been pushing to finish this project, this particular post may be a little
+bit shorter than subsequent posts should be. Also, I don't think this topic
+(creating a blog with React, Next, and MDX) is particularly interesting,
+considering basically everybody ever has talked about this.
+
+As a final note, I'm still putting some final touches on the blog to improve
+general site accessibility and ease-of-use from mobile. Please
+[email me](mailto:jaimegensler0@gmail.com) about accessibility issues,
+mobile-use issues, ~~job offers~~, broken links, or your opinion on how the site
+looks / how it could be improved. Genuinely, I love constructive criticism.
+
+With all that aside, let's dive in!
+
+---
+
+## Making of the blog
+
+### The Stack
+
+When I decided to start the project, I knew I wanted to make the site with
+**Next.js** and **React** - Next.js for its easy file-based routing and general
+developer ergonomics, and React because yes. I was originally leaning towards
+using Ant Design and Styled Components to get the styling done, but at the
+recommendation of one of my brothers, I decided to check out **Tailwind CSS**.
+And holy guacermole, does Tailwind feel gooooood to write. Tailwind also
+provided a better opportunity to practice my raw(ish) CSS chops than a component
+library like AntD would have done, so that's another point for Tailwind.
