--- a/pages/blog/bee-movie.mdx
+++ b/pages/blog/bee-movie.mdx
@@ -6,8 +6,7 @@ date: Friday, June 5th, 2020
 published: true
 
 coverPhoto: https://www.thepopcornmuncher.com/wp-content/uploads/2016/11/bee-movie-1024x582.jpg
-coverPhotoAlt: Jerry Bee-infeld
-coverPhotoTitle: Jerry Bee-infeld
+coverPhotoAltText: Jerry Bee-infeld
 ---
 
 According to all known laws of aviation, there is no way a bee should be able to
