--- a/pages/blog/twentytwentyone.mdx
+++ b/pages/blog/twentytwentyone.mdx
@@ -6,8 +6,7 @@ date: Thursday, January 7th, 2021
 published: true
 
 coverPhoto: https://www.thepopcornmuncher.com/wp-content/uploads/2016/11/bee-movie-1024x582.jpg
-coverPhotoAlt: Jerry Bee-infeld
-coverPhotoTitle: Jerry Bee-infeld
+coverPhotoAltText: Jerry Bee-infeld
 ---
 
 Hemmmmmoooo
