--- a/pages/blog/welcome-to-my-blog.mdx
+++ b/pages/blog/welcome-to-my-blog.mdx
@@ -8,8 +8,7 @@ date: Friday, June 13th, 2020
 published: false
 
 coverPhoto: https://upload.wikimedia.org/wikipedia/commons/8/88/Portland_and_Mt._Hood_from_Pittock_Mansion.jpg
-coverPhotoAlt: Portland Skyline
-coverPhotoTitle: Portland Skyline
+coverPhotoAltText: Portland Skyline
 ---
 
 ## Introduction
