--- a/pages/blog/post-1.mdx
+++ b/pages/blog/post-1.mdx
@@ -8,8 +8,7 @@ date: Thursday, June 4th, 2020
 published: true
 
 coverPhoto: https://upload.wikimedia.org/wikipedia/commons/8/88/Portland_and_Mt._Hood_from_Pittock_Mansion.jpg
-coverPhotoAlt: Portland Skyline
-coverPhotoTitle: Portland Skyline
+coverPhotoAltText: Portland Skyline
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
