--- a/pages/blog/test1.mdx
+++ b/pages/blog/test1.mdx
@@ -6,8 +6,7 @@ date: Saturday, July 25th, 2020
 published: true
 
 coverPhoto: https://www.thepopcornmuncher.com/wp-content/uploads/2016/11/bee-movie-1024x582.jpg
-coverPhotoAlt: Jerry Bee-infeld
-coverPhotoTitle: Jerry Bee-infeld
+coverPhotoAltText: Jerry Bee-infeld
 ---
 
 Hemlo
